Added Logo to Page, generated with https://textcraft.net

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 	<div id=Header>
-		<h1>The Strawberry Pack</h1>
-		If regular is Vanilla and modded is Chocolate, then this is Strawberry.
+		<img src="img/textcraft-logo.png" alt="The Strawberry Pack" title="Logo Craeated with https://textcraft.net"></img>
 	</div>
 	<div id=NavBar>
 		<a id="RepoLink">GitHub Repository</a>
@@ -27,6 +26,10 @@
 			Loading <code>REAMDE</code> from GitHub, please wait.<br/>
 			If the page never loads, ensure JavaScript is enabled and that requests to <a href="https://github.com">https://github.com</a> are not blocked.
 		</center>
+	</div>
+	<div id="Footer">
+		Logo Genreated with <a href="https://textcraft.net/">https://textcraft.net/</a><br/>
+		The Strawberry Pack is in no way affiliated with Mojang.
 	</div>
 </body>
 </html>
