Added some Meta Tags for Pretty Discord Embedding

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
         <meta charset="utf-8">
-        <title>The Strawberry Pack</title>
 
+        <meta name="description" content="If regular is Vanilla and modded is Chocolate, then THIS is Strawberry. A Minecraft Data Pack designed to enhance the vanilla experience.">
+	<meta name="theme-color" content="#F7A">
+        <meta name="keywords" content="minecraft, data pack">
+
+	<meta name="twitter:card" content="img/textcraft-logo.png">
+
+        <title>The Strawberry Pack</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="icon" href="img/favicon.png">
         <script type=module src="js/main.js"></script>
