--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
         <meta charset="utf-8">
 
         <meta name="description" content="If regular is Vanilla and modded is Chocolate, then THIS is Strawberry. A Minecraft Data Pack designed to enhance the vanilla experience.">
-	<meta name="theme-color" content="#F7A">
+	<meta name="theme-color" content="#FF77AA">
         <meta name="keywords" content="minecraft, data pack">
-
-	<meta name="twitter:card" content="img/textcraft-logo.png">
 
         <title>The Strawberry Pack</title>
         <link rel="stylesheet" href="css/main.css">
